# transformer-ir-optimizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
benchmarks/: driver.cpp  transformer_kernels.cpp
benchmarks/include/: transformer_kernels.h
docs/: methodology.md  project-overview.md
include/: LLMInferencePass.h
scripts/: run_benchmarks.ps1
src/: LLMInferencePass.cpp
tests/FileCheck/: lit.cfg.py  llm_patterns.ll
